# karse

./: CMakeLists.txt  README.md
docs/: git_specification.md  request.http
src/: stdafx.h
src/core/: core.h  main.c
src/crypto/: crypto.h  key.c  key.h  x509.c  x509.h
src/io/: io.h
src/io/file/: file.c  file.h
src/io/web/: http.c  http.h  web.h
src/io/web/socket/: linux.c  linux.h  windows.c  windows.h
